--- a/t.p alan final/app/presentation/web/templates/base.html
+++ b/t.p alan final/app/presentation/web/templates/base.html
@@ -6,7 +6,7 @@
     <title>{% block title %}Sistema de Usuarios{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}?v=20251108-01">
 </head>
 <body>
     {% if not request.args.get('embed') %}
